@@ -1,3 +1,5 @@
+2013-03-26: Rework the way access checks are done for output files.
+
 2013-03-18: Release v0.5.1.
 
 2013-03-18: Compatibility fix for Python 3.1.
